[gd_scene load_steps=2 format=3 uid="uid://ctswej65ofgus"]

[ext_resource type="Script" uid="uid://cecsynak0dsn1" path="res://scenes/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 150.0
offset_right = -200.0
offset_bottom = -150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "XISTRA"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="MapDemoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Map Demo"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ErrorMessage" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "No saved game found!"
